      case of distributed WATO setups
    * FIX: Fixed synchronisation of mkeventd configs in distributed WATO setups

    Event Console:
    * Added UNIX socket for sending events to the EC
    * Speed up rule matches in some special cases by factor of 100 and more
    * Init-Script: Improved handling of stale pidfiles
    * Init-Script: Detecting and reporting already running processes

1.2.1i5:
    Core:
    * Improved handling of CTRL+C (SIGINT) to terminate long runnining tasks 
      (e.g.  inventory of SNMP hosts)
    * FIX: PING services on clusters are treated like the host check of clusters
    * cmk --notify: new environment variable NOTIFY_WHAT which has HOST or SERVICE as value
    * cmk --notify: removing service related envvars in case of host notifications
    * cmk --notify: added test code to help developing nitofication plugins.
      Can be called with "cmk --notify fake-service debug" for example

    Checks & Agents:
    * Linux Agent, diskstat: Now supporting /dev/emcpower* devices (Thanks to Claas Rockmann-Buchterkirche)
    * FIX: winperf_processor: Showing 0% on "cmk -nv" now instead of 100%
    * FIX: win_dhcp_pools: removed faulty output on non-german windows 2003 servers 
           with no dhcp server installed (Thanks to Mathias Decker)
    * Add: fileinfo is now supported by the solaris agent. Thanks to Daniel Roettgermann
    * Logwatch: unknown eventlog level ('u') from windows agent treated as warning
    * FIX: logwatch_ec: Added state undefined as priority
    * Add: New Check for Raritan EMX Devices
    * Add: mailman_lists - New check to gather statistics of mailman mailinglists
    * FIX: megaraid_bbu - Handle missing charge information (ignoring them)
    * FIX: myssql_tablespaces - fix PNP graph (thanks to Christian Zock)
    * kernel.util: add "Average" information to PNP graph
    * Windows Agent: Fix startup crash on adding a logfiles pattern, but no logfile specified